# image-dds

./: CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  supported-formats.md
.github/workflows/: rust.yml
benches/: decode.rs  encode.rs
fuzz/: .gitignore  Cargo.toml
fuzz/decoder/: decoder.rs
src/: bcn_data.rs  cast.rs  data.rs  decoder.rs  detect.rs  dxgi_format.rs  encoder.rs  error.rs  format.rs  header.rs  image_integration.rs  iter.rs  layout.rs  lib.rs  pixel.rs  progress.rs  resize.rs  split.rs  tiny_set.rs  util.rs
src/color/: ch.rs  formats.rs  mod.rs  oklab.rs
src/decode/: adapt.rs  astc.rs  bc.rs  bc1.rs  bc6.rs  bc7.rs  bcn_util.rs  bi_planar.rs  convert.rs  decoder.rs  mod.rs  read_write.rs  sub_sampled.rs  uncompressed.rs  util.rs
src/encode/: bc.rs  bc1.rs  bc4.rs  bc7.rs  bcn_util.rs  bi_planar.rs  encoder.rs  mod.rs  oklab.rs  sub_sampled.rs  uncompressed.rs  write.rs  write_util.rs
test-data/: convert_header_snapshot.txt  encode_format_metadata.txt  encode_quality.md  encode_quality.txt  format-metadata.yml  format_metadata.txt  header_parsing.txt  invalid_header_layout.txt  layout_snapshot.txt  progress_snapshot.yml  raw_header_snapshot.txt
test-data/images/astc/: ASTC 10x10.dds  ASTC 10x5.dds  ASTC 10x6.dds  ASTC 10x8.dds  ASTC 12x10.dds  ASTC 12x12.dds  ASTC 4x4.dds  ASTC 5x4.dds  ASTC 5x5.dds  ASTC 6x5.dds  ASTC 8x5.dds  ASTC 8x6.dds  ASTC 8x8.dds
test-data/images/bc/: DX9 BC3n (DXT5nm).dds  DX9 DXT2.dds  DX9 DXT4.dds
test-data/images/bc fuzz/: bc6 SF16 mode one 00011.dds  bc6 SF16 mode one 00111.dds  bc6 SF16 mode one 01011.dds  bc6 SF16 mode one 01111.dds  bc6 SF16 mode two 00.dds  bc6 SF16 mode two 00010.dds  bc6 SF16 mode two 00110.dds  bc6 SF16 mode two 01.dds  bc6 SF16 mode two 01010.dds  bc6 SF16 mode two 01110.dds  bc6 SF16 mode two 10010.dds  bc6 SF16 mode two 10110.dds  bc6 SF16 mode two 11010.dds  bc6 SF16 mode two 11110.dds  bc6 UF16 mode one 00011.dds  bc6 UF16 mode one 00111.dds  bc6 UF16 mode one 01011.dds  bc6 UF16 mode one 01111.dds  bc6 UF16 mode two 00.dds  bc6 UF16 mode two 00010.dds  bc6 UF16 mode two 00110.dds  bc6 UF16 mode two 01.dds  bc6 UF16 mode two 01010.dds  bc6 UF16 mode two 01110.dds  bc6 UF16 mode two 10010.dds  bc6 UF16 mode two 10110.dds  bc6 UF16 mode two 11010.dds  bc6 UF16 mode two 11110.dds  bc7 mode 0.dds  bc7 mode 1.dds  bc7 mode 2.dds  bc7 mode 3.dds  bc7 mode 4.dds  bc7 mode 5.dds  bc7 mode 6.dds  bc7 mode 7.dds
test-data/images/bi-planar/: DX10 P010.dds  DX10 P016.dds
test-data/images/cube/: Pretoria Gardens DX10.dds  Pretoria Gardens DX9.dds  SYSTEX_ENVLIGHT.dds  modelviewer_default_rem.dds
test-data/images/nvtt/: 16.16f RG DX10.dds  16.16f RG.dds  16f R DX10.dds  16f R.dds  16x4f RGBA DX10.dds  16x4f RGBA.dds  32.32f RG DX10.dds  32.32f RG.dds  32f R DX10.dds  32f R.dds  32x4f RGBA DX10.dds  32x4f RGBA.dds  8 A DX10.dds  8 A.dds  8 L DX10.dds  8 L.dds  8.8.8 BGR.dds  8.8.8 RGB.dds  8.8.8.8 BGRA DX10.dds  8.8.8.8 BGRA.dds  8.8.8.8 RGBA DX10.dds  8.8.8.X BGRX.dds  8.8.8.x BGRX DX10.dds  BC1 RGB DX10.dds  BC1 RGB.dds  BC1a RGBA DX10.dds  BC1a RGBA.dds  BC2 RGB DX10.dds  BC2 RGBA.dds  BC3 RGBA DX10.dds  BC3 RGBA.dds  BC3n AGBR.dds  BC3n Normals.dds  BC4u R.dds  BC5u RG DX10.dds  BC5u RG.dds
test-data/images/other/: RXGB (no alpha).dds  restricted-header.dds
test-data/images/permissive/: BC1 Pretoria Gardens DX10 - array_size=6 issue4.dds  array_size 0.dds  dds header_size 24.dds  dds pixel_format size 0.dds  dds pixel_format size 24.dds  no pixel_format flags.dds  wrong mipmap count 1.dds  wrong mipmap count 2.dds  wrong mipmap count 3.dds  wrong mipmap count 4.dds  wrong mipmap count 5.dds  wrong mipmap count 6.dds
test-data/images/sub-sampled/: DX10 Y210.dds  DX10 Y216.dds  DX9 UYVY.dds  (+1 more)
tests/: bc_fuzz_gen.rs  decode.rs  encode.rs  format.rs  header.rs  layout.rs  output.rs  pixel.rs  progress.rs  util.rs
tests/util/: data.rs  encode_quality.rs  image.rs  mod.rs  pretty_print.rs  snapshot.rs  table.rs
(+124 files in other folders)
