[package]
name = "dds"
version = "0.1.0"
license = "MIT OR Apache-2.0"

description = "DDS de/encoding library in pure safe Rust"
categories = ["multimedia::images"]
authors = ["Michael Schmidt"]
repository = "https://github.com/RunDevelopment/dds"

edition = "2021"
rust-version = "1.61"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.0"
glam = "=0.25.0"
zerocopy = "0.8.14"

[dev-dependencies]
criterion = "0.5"
glob = "0.3.1"
miniz_oxide = "0.8.5"
png = "0.17"
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.8"

[[bench]]
path = "benches/decode.rs"
name = "decode"
harness = false

[[bench]]
path = "benches/encode.rs"
name = "encode"
harness = false

[profile.test]
# enable some optimizations for tests
# image de/encoding without optimizations is extremely slow
opt-level = 1
