[package]
name = "dds"
version = "0.2.0"
edition = "2021"
rust-version = "1.63.0"

license = "MIT OR Apache-2.0"
description = "DDS de/encoder written in 100% safe Rust"
authors = ["The image-rs Developers"]

repository = "https://github.com/image-rs/image-dds"
homepage = "https://github.com/image-rs/image-dds"
categories = ["multimedia::images", "multimedia::encoding"]

include = [
	"src/",
	"benches/",
	"README.md",
	"CHANGES.md",
	"supported-formats.md",
	"LICENSE-APACHE",
	"LICENSE-MIT",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
astc-decode = "=0.3.1"
bitflags = "2.4.0"
glam = "0.25.0"
resize = { version = "0.8.4", default-features = false, features = ["std"] }
zerocopy = "0.8.14"

# optional dependencies
rayon = { version = "1.7.0", optional = true }
image = { version = ">=0.24, <1.0", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.5"
glob = "0.3.1"
png = "0.17"
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.8"

[features]
default = ["rayon"]

# Enables parallel encoding via rayon. This makes encoding BCn images 5-20x faster.
rayon = ["dep:rayon", "resize/rayon"]
# Enable integration with the image crate.
image = ["dep:image"]

[[bench]]
path = "benches/decode.rs"
name = "decode"
harness = false

[[bench]]
path = "benches/encode.rs"
name = "encode"
harness = false

[profile.test]
# enable some optimizations for tests
# image de/encoding without optimizations is extremely slow
opt-level = 1

[lints.rust]
# https://github.com/taiki-e/cargo-llvm-cov
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(coverage,coverage_nightly)',
] }
